--- a/JavaScript-Applications/Exercise-Single Page Applications/01.Forum/index.html
+++ b/JavaScript-Applications/Exercise-Single Page Applications/01.Forum/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3cd69e2433.js" crossorigin="anonymous"></script>
     <title>SoftUni Forum</title>
+    <script src="app.js" type="module"></script>
 </head>
 
 <body>
@@ -63,12 +64,9 @@
 
                 <!-- topic component  -->
                 <div class="topic-container">
-                    
+
                 </div>
-                
-
         </main>
-
     </div>
 
     <footer>
