--- a/JavaScript-Applications/ExerciseRouting/01.Furniture/index.html
+++ b/JavaScript-Applications/ExerciseRouting/01.Furniture/index.html
@@ -8,7 +8,7 @@
     <title>Furniture</title>
     <base href="/">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <script src="/src/app.js" type="module"></script>
+    <script type="module" src="/src/app.js" ></script>
 </head>
 
 <body>
